# GenLab-m5gp

./: .dockerignore  .env.example  .gitattributes  .gitignore  FILE_MANIFEST.json  GenLab-m5gp.code-workspace  Makefile  README.md  VALIDATION.md  VALIDATION_ABOUT.md  VALIDATION_I18N.md  docker-compose.yml  environment-gpu.yml  package-lock.json
backend/: Dockerfile  README.md  pyproject.toml
backend/src/genlab_api/: README.md  config.py  db.py  deps.py  main.py  models.py  schemas.py  security.py  worker.py
backend/src/genlab_api/routers/: README.md  about.py  auth.py  datasets.py  experiments.py  gpus.py
backend/src/genlab_api/services/: README.md  experiments.py  files.py  gpu.py
backend/tests/: README.md  test_about.py  test_classification_and_visualization.py  test_dataset_files.py  test_derived_artifact_downloads.py  test_experiment_json_artifact.py  test_experiment_management.py  test_health.py  test_regression_methods.py
core/: README.md  pyproject.toml
core/src/m5gp/: README.md  __init__.py  runtime.py
core/tests/: README.md  _bootstrap.py  clasificacion_diabetes.py  m5gp_Digen.py  m5gp_Test.py  m5gp_Test2.py  m5gp_Test_Classifier.py  test_imports.py  test_layout.py
data/: README.md
docs/: ARCHITECTURE.md  GITHUB_PUBLISHING.md  LEGAL_NOTICE.md  README.md
frontend/: .npmrc  Dockerfile  README.md  index.html  package-lock.json  package.json  verify_i18n.py  vite.config.ts
infra/: README.md
tools/: README.md  check_github_repository.py  install_core_from_github.py  install_core_from_github.sh  publish_to_github.sh  verify_structure.py
(+18 files in other folders)
