[build-system]
requires=["setuptools>=69","wheel"]
build-backend="setuptools.build_meta"
[project]
name="genlab-m5gp-api"
version="1.0.0"
requires-python=">=3.10,<3.14"
dependencies=[
 "fastapi>=0.115","uvicorn[standard]>=0.30","sqlalchemy>=2.0","pydantic-settings>=2.5",
 "python-multipart>=0.0.12","PyJWT>=2.9","argon2-cffi>=23.1","email-validator>=2.2",
 "pandas>=2.1","scikit-learn>=1.4","joblib>=1.3","m5gp-core>=2.0.0"
]
[project.optional-dependencies]
postgres=["psycopg[binary]>=3.2"]
test=["pytest>=8","httpx>=0.27"]
[tool.setuptools]
package-dir={""="src"}
[tool.setuptools.packages.find]
where=["src"]
